deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creator-store-web
spec:
  selector:
    app.kubernetes.io/name: creator-store-web
  ports:
    - port: 80
      targetPort: http
